fix ghost scrollbar on Firefox

--- a/app/src/docs/components/DocsLayout/Navigation/navigation.pcss
+++ b/app/src/docs/components/DocsLayout/Navigation/navigation.pcss
@@ -22,9 +22,9 @@ ul.subNavList {
 ul.navList {
   padding: 0;
   max-height: 100vh;
-  overflow: auto;
   overflow: scroll;
   overflow-x: hidden;
+  scrollbar-width: none;
 
   &::-webkit-scrollbar {
     width: 0;
